--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 
-  <img src="assets/page1.jpg" alt="single scroll page 1" class="scroll-image">
-  <img src="assets/page2.jpg" alt="single scroll page 2" class="scroll-image">
+  <img src="assets/page2.jpg" alt="page 2" class="scroll-image">
+  <img src="assets/page1.jpg" alt="page 1" class="scroll-image">
 
 </body>
 </html>
+
